# secure-hybrid-hub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
hybrid-hub/: AGENTS.md  CLAUDE.md  README.md  hub.py  pyproject.toml
hybrid-hub/config/: model-catalog.example.json  policy.example.toml
hybrid-hub/config/adapters/: local.example.toml
hybrid-hub/config/modifiers/: healthcare-local.example.json  high-secret.example.json  legal-local.example.json  standard-local.example.json
hybrid-hub/config/research/: searxng.example.yml
hybrid-hub/docs/: GUIDED_ORCHESTRATION.md  MODEL_ROUTING_OPERATIONS.md  OPERATIONS_RUNBOOK.md  OPT_IN_PROJECTS.md  PROJECT_MODIFIERS.md
hybrid-hub/dossier/: development.json
hybrid-hub/dossier/checkpoints/: phase-0.json  phase-1.json  phase-10.json  phase-11.json  phase-2.json  phase-3.json  phase-4.json  phase-5.json  (+5 more)
hybrid-hub/schemas/: catalog.json
hybrid-hub/tests/: model_routing_fixture.py  test_adversarial.py  test_guided.py  test_http_api_worker.py  test_integration.py  test_model_cli.py  test_model_cli_entrypoints.py  test_model_routing.py  test_model_routing_e2e.py  test_model_select.py  test_project_assets.py  test_quality.py  test_release_phases.py  test_research.py  test_security_phase6.py  test_subscription_worker.py  test_topology_e2e.py  test_unit.py
hybrid-hub/verification/: gemma3-complex-evaluation.json  gemma3-guided-evaluation.json  guided-orchestration.json  phase-0-3.json  phase-10.json  phase-11.json  phase-4.json  phase-5.json  phase-6.json  phase-7.json  phase-8.json  phase-9.json
(+93 files in other folders)
