[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-hybrid-hub"
version = "0.1.0"
description = "Fail-closed local broker for hybrid AI development workflows"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hub = "hybrid_hub.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
